--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
+    "express-session": "^1.15.5",
     "mysql2": "^1.4.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
