--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "sequelize": "^4.4.3"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
